# wedding-project

./: .env.example  CNAME  Procfile  README.md  build.sh  changes.txt  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  start.py  wedding_invitation - Shortcut.lnk  wsgi.py
invitation/: admin.py  models.py  urls.py  views.py
static/css/: style.css
wedding_invitation/: asgi.py  settings.py  urls.py  views.py  wsgi.py
wedding_invitation/static/css/: style.css
wedding_invitation/templates/: bride.html  groom.html  home.html  next_page.html
wedding_project/: wsgi.py
